# dependabot-tester

./: Pipfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot_auto_approve.yml
